@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2003/06/29 20:07:23 jdolecek Exp $
+$NetBSD: distinfo,v 1.5 2003/10/05 07:12:21 jdolecek Exp $
 
-SHA1 (VMware-workstation-3.2.1-2237.tar.gz) = 029a4ffd00217f95744b168c8faab162ee9417fb
-Size (VMware-workstation-3.2.1-2237.tar.gz) = 12577022 bytes
+SHA1 (VMware-workstation-3.2.1-2242.tar.gz) = 3f3c8539270707087525e220264a38639bf17547
+Size (VMware-workstation-3.2.1-2242.tar.gz) = 12577292 bytes
